<resources>
    <string name="app_name">Sublime</string>


    <string name="title_home">Home</string>
    <string name="title_balance">Business</string>
    <string name="title_bag">Wallet</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_Open">Open</string>
    <string name="drawer_Close">Close</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="send_failed">Sending invitations failed</string>

    <string name="invitation_title">Send App Invitation</string>
    <string name="invitation_message">Special season for this app is starting now, try it and get special offer</string>
    <string name="invitation_deep_link">http://example.com/offer/100_baht</string>
    <string name="invitation_cta">Check it out here!</string>
    <string name="invitation_subject">I want to give you 100 baht</string>
    <string name="invitation_no_id">No invitation id: %s \n\n</string>


    <string-array name="AddressProof">
        <item>Aadhar Card</item>
        <item>DL(Driver License)</item>
        <item>Voter ID</item>
    </string-array>

    <string-array name="CouponRequest">
        <item>2240</item>
        <item>6720</item>
        <item>11200</item>
        <item>22400</item>
    </string-array>
    <string-array name="TransferType">
        <item>IMPS</item>
        <item>NEFT</item>

    </string-array>
    <string-array name="states">
        <item>Andaman and Nicobar</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadar and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Puducherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
    </string-array>

</resources>
