<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_Home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_business"
        android:icon="@drawable/business"
        android:title="@string/title_balance" />

    <item
        android:id="@+id/navigation_bank"
        android:icon="@drawable/ic_account_balance_black_24dp"
        android:title="@string/title_bag" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/order"
        android:title="@string/title_cart" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_outline_black_24dp"
        android:title="@string/title_profile" />
</menu>